<resources>
    <string name="app_name">ServicioMedico</string>
    <string name="ServicioMedico">Servicio Médico</string>
    <string name="Matrícula">Matrícula</string>
    <string name="Contraseña">Contraseña</string>
    <string name="Acceder">Acceder</string>
    <string name="Logo">Logo del Tecnológico de Monterrey</string>
    <string name="Mapa">Mapa</string>
    <string name="Pacientes">Lista de Pacientes</string>
    <string name="Notificaciones">Notificaciones</string>
    <string name="Descripcion1">Boton para cambiar a la pantalla del mapa</string>
    <string name="Descripcion2">Boton para cambiar a la pantalla de pacientes</string>
    <string name="Descripcion3">Boton para cambiar a la pantalla de notificaciones</string>
    <string name="descripcion4">Textview para mostrar el nombre del estudiante seleccionado</string>
    <string name="Descripcion5">Boton para hacer logout</string>
    <string name="titulo1">Ubicaciones de los pacientes</string>
    <string name="Titulo2">Lista de pacientes</string>
    <string name="Titulo3">Notificaciones</string>
    <string name="pacienteNuevo">Agregar paciente nuevo</string>
    <string name="Descripcion6">Boton para regresar a la pantalla anterior</string>
    <string name="NombrePaciente">Nombre del paciente:</string>
    <string name="AgregarPaciente">Agregar paciente</string>
    <string name="Nombre">Nombre</string>
    <string name="DatosPaciente">Datos del paciente:</string>
    <string name="Edad">Edad</string>
    <string name="Padecimientos">Padecimientos</string>
    <string name="Medicamentos">Medicamentos</string>
    <string name="DatosAcceso">Datos de acceso a la aplicación:</string>
    <string name="Accesso">Datos para que acceda a la aplicación:</string>
    <string name="Bienvenido">Bienvenido</string>
    <string name="Emergencia">Emergencia</string>
    <string name="ApellidoP">Apellido paterno</string>
    <string name="ApellidoM">Apellido materno</string>
    <string name="NomContacto">Nombre del contacto de emergencia</string>
    <string name="NumContacto">Número del contacto de emergencia</string>
    <string name="UbicacionCompartida">Tú ubicación será compartida con los doctores de la institución</string>
    <string name="Emergencia1">En caso de emergencia, cambiar el siguiente campo y presionar el botón para informar a los doctores en caso de una emergencia.</string>
    <string name="DescripcionEmergencia">Me ocurrio un accidente. Auxilio!</string>
</resources>
