<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".Paciente_principal">

    <EditText
        android:id="@+id/editText13"
        android:layout_width="373dp"
        android:layout_height="107dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/textbox"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/DescripcionEmergencia"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:singleLine="false"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.18" />

    <ImageButton
        android:id="@+id/button10"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/button"
        android:contentDescription="@string/Descripcion5"
        android:onClick="logout"
        android:scaleType="centerInside"
        android:textColor="?attr/colorBackgroundFloating"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.042"
        app:srcCompat="@drawable/logout" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="302dp"
        android:layout_height="29dp"
        android:text="@string/Bienvenido"
        android:textAlignment="textStart"
        android:textColor="#1b6ad1"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.146"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.059" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="371dp"
        android:layout_height="49dp"
        android:text="@string/UbicacionCompartida"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:layout_constraintVertical_bias="0.077" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView2"
        android:layout_width="369dp"
        android:layout_height="256dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.045" />

    <Button
        android:id="@+id/button17"
        android:layout_width="173dp"
        android:layout_height="65dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button"
        android:text="@string/Emergencia"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="enviarNotificacion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText13"
        app:layout_constraintVertical_bias="0.312" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="369dp"
        android:layout_height="62dp"
        android:text="@string/Emergencia1"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapView2"
        app:layout_constraintVertical_bias="0.054" />

</androidx.constraintlayout.widget.ConstraintLayout>