<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".Doctor_listaPacientes">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="302dp"
        android:layout_height="29dp"
        android:fontFamily="sans-serif"
        android:text="@string/Titulo2"
        android:textAlignment="textStart"
        android:textColor="#1b6ad1"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.146"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041" />

    <ImageButton
        android:id="@+id/button6"
        android:layout_width="137dp"
        android:layout_height="60dp"
        android:background="@drawable/button3"
        android:contentDescription="@string/Descripcion1"
        android:onClick="goToMap"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/mapwhite"
        android:textColor="#4f88e8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.126" />

    <ImageButton
        android:id="@+id/button7"
        android:layout_width="137dp"
        android:layout_height="60dp"
        android:layout_marginEnd="104dp"
        android:background="@drawable/button2"
        android:contentDescription="@string/Descripcion2"
        android:onClick="goToPatients"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/userblue"
        android:textColor="?attr/colorBackgroundFloating"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.126" />

    <ImageButton
        android:id="@+id/button8"
        android:layout_width="137.3dp"
        android:layout_height="60dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/button3"
        android:contentDescription="@string/Descripcion3"
        android:onClick="goToNotifications"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/notificationwhite"
        android:textColor="?attr/colorBackgroundFloating"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.121" />

    <ImageButton
        android:id="@+id/button9"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@drawable/button"
        android:contentDescription="@string/Descripcion5"
        android:onClick="logout"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/logout"
        android:textColor="?attr/colorBackgroundFloating"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="459dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7"
        app:layout_constraintVertical_bias="0.0">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/datos_paciente"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </RelativeLayout>

    </ScrollView>

    <Button
        android:id="@+id/button23"
        android:layout_width="371dp"
        android:layout_height="45dp"
        android:background="@drawable/button"
        android:text="@string/pacienteNuevo"
        android:textColor="#ffffff"
        android:onClick="goToNewPatient"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        app:layout_constraintVertical_bias="0.215" />

</androidx.constraintlayout.widget.ConstraintLayout>