<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Doctor_mapa">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="302dp"
        android:layout_height="29dp"
        android:text="@string/titulo1"
        android:textAlignment="textStart"
        android:textColor="#1b6ad1"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.146"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041" />

    <ImageButton
        android:id="@+id/button2"
        android:layout_width="137dp"
        android:layout_height="60dp"
        android:background="@drawable/button2"
        android:contentDescription="@string/Descripcion1"
        android:onClick="goToMap"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/mapblue"
        android:textColor="#4f88e8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.126" />

    <ImageButton
        android:id="@+id/button3"
        android:layout_width="137dp"
        android:layout_height="60dp"
        android:background="@drawable/button3"
        android:contentDescription="@string/Descripcion2"
        android:onClick="goToPatients"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/userwhite"
        android:textColor="?attr/colorBackgroundFloating"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.126" />

    <ImageButton
        android:id="@+id/button4"
        android:layout_width="137.3dp"
        android:layout_height="60dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/button3"
        android:contentDescription="@string/Descripcion3"
        android:onClick="goToNotifications"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/notificationwhite"
        android:textColor="?attr/colorBackgroundFloating"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.121" />

    <ImageButton
        android:id="@+id/button5"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@drawable/button"
        android:contentDescription="@string/Descripcion5"
        android:onClick="logout"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/logout"
        android:textColor="?attr/colorBackgroundFloating"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="371dp"
        android:layout_height="543dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:layout_constraintVertical_bias="0.351" />

</androidx.constraintlayout.widget.ConstraintLayout>